# agentic_design_patterns

./: README.md  chaining.py  code_quality_crew.py  example_export.md  info_extraction_from_docs.py  memory_googleadk.py  parallelization_googleadk.py  parallelization_langchain.py  parsing_docs_with_paddleocr.py  peer_review_docling_langgraph.py  peer_review_docling_mcp.py  pyproject.toml  reflection_googleadk.py  reflection_langchain.py  resource_optimization_googleadk.py  routing_googleadk.py  routing_langchain.py  tools_crewai.py  tools_googleadk.py  tools_googleadk_executecode.py  tools_googleadk_vertexsearch.py
a2a_trip_planner/: README.md  __init__.py  __main__.py  a2a_common.py  run.py
a2a_trip_planner/agents/: __init__.py
a2a_trip_planner/agents/crewai_flights/: __init__.py  agent_card.json  flight_agent.py
a2a_trip_planner/agents/googleadk_hotels/: __init__.py  agent_card.json  hotel_agent.py
a2a_trip_planner/agents/langgraph_orchestrator/: __init__.py  agent_card.json  orchestrator.py
coder_agent/: __init__.py  __main__.py  code_quality_crew.py  goal_tracker.py
