[project]
name = "agentic-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langchain-groq>=1.1.1",
    "google-cloud-aiplatform>=1.132.0",
    "langchain-google-genai>=4.1.2",
    "google-adk>=1.21.0",
    "deprecated>=1.3.1",
    "pydantic>=2.12.5",
    "nest-asyncio>=1.6.0",
    "crewai>=1.6.1",
    "litellm>=1.80.11",
    "docling>=2.66.0",
    "langchain-docling>=2.0.0",
    "mcp>=1.25.0",
    "langchain-mcp-adapters>=0.2.1",
]
